--- a/.github/workflows/ci_cpu.yml
+++ b/.github/workflows/ci_cpu.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [ubuntu-latest]
     steps:
       - name: Setup Python 3.8
         uses: actions/setup-python@v2
@@ -35,26 +35,11 @@ jobs:
       - name: Install dependencies
         run: |
           python ts_scripts/install_dependencies.py --environment=dev
-      - name: Torchserve Sanity
-        run: |
-          python torchserve_sanity.py
       - name: mvn install - unix
         if: matrix.os != 'windows-latest'
         run: |
             cd serving-sdk/ && ./mvnw clean install -q && cd ../
-      - name: mvn install - windows
-        if: matrix.os == 'windows-latest'
-        run: |
-            cd serving-sdk/ && .\mvnw.cmd clean install -q && cd ../
-      # Any coverage.xml will be picked up by this step
-      # Just make sure each coverage.xml is in a different folder
-      - name: Upload codecov
-        if: matrix.os == 'ubuntu-latest'
-        run : |
-          curl -Os https://uploader.codecov.io/latest/linux/codecov
-          chmod +x codecov
-          ./codecov
-          
+      
       - name: Download Scantist-Bom-Detect
         run: curl -s https://download.scantist.io/scantist-bom-detect.jar --output scantist-bom-detect.jar
       
